# language-graph-engine

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: resolver.rs
docs/: foundation-test-vectors.md  testing.md
public/: app.js  index.html  styles.css
scripts/: verify.ps1
src/: app.rs  config.rs  error.rs  hdc.rs  hdc_engine.rs  lib.rs  main.rs  server.rs
src/content/: blocks.rs  cid.rs  encoding.rs  mod.rs
src/db/: migrations.rs  repository.rs
src/lexicon_import/: esdb.rs  importer.rs  mod.rs  provenance.rs  report.rs
src/model/: collection.rs  entity.rs  grapheme.rs  mod.rs  written_form.rs
src/resolver/: text.rs
src/seed/: ascii_supplemental.rs  lowercase_latin.rs  mod.rs  phase2.rs
src/written_forms/: composer.rs  mod.rs  policy.rs  publisher.rs  repository.rs
tests/: concurrent.rs  content_addressing.rs  hdc_pipeline_tests.rs  http_api.rs  lexicon_import_tests.rs  phase2_1_tests.rs  phase2_tests.rs  phase3_tests.rs  resolver.rs  seeding.rs
tests/fixtures/: phase_2_1_ascii_supplemental_golden_vectors.json
