[package]
name = "language-graph-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ipld_dagcbor = "0.6"
cid = "0.11"
multihash = "0.19.0"
multihash-codetable = { version = "0.2.2", features = ["sha2"] }
unicode-normalization = "0.1"
unicode-segmentation = "1.11"
tower-http = { version = "0.5", features = ["fs", "cors"] }
thiserror = "1.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
